--- a/package.json
+++ b/package.json
@@ -6,10 +6,19 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "rnpm": {
+    "assets": [
+      "./app/core/assets/fonts/"
+    ]
+  },
   "dependencies": {
-    "react-native": "0.59.10",
     "prop-types": "^15.7.2",
-    "react": "16.8.3"
+    "react": "16.8.3",
+    "react-native": "0.59.10",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-track-player": "1.1.6",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
