--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,27 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react"],
-  "plugins": ["react", "react-native"],
-  "parser": "babel-eslint",
+  "extends": [
+    "airbnb",
+    "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "plugins": [
+    "@typescript-eslint",
+    "react-native",
+    "eslint-plugin-react-hooks"
+  ],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
+      }
+    }
+  },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2016,
     "sourceType": "module",
@@ -15,17 +35,29 @@
     "jest": true
   },
   "rules": {
-    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "max-len": [
+      "error",
+      120
+    ],
+    "global-require": "off",
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".tsx"] }],
+    "react/jsx-one-expression-per-line": "off",
     "react-native/no-unused-styles": "warn",
     "react-native/split-platform-components": "error",
     "react-native/no-inline-styles": "warn",
     "react-native/no-color-literals": "error",
     "react-native/no-raw-text": "off",
+    "import/prefer-default-export": "off",
+    "class-methods-use-this": "off",
     "no-use-before-define": ["error", { "variables": false }],
     "spaced-comment": "off",
-    "max-len": "off",
     "react/destructuring-assignment": "warn",
-    "react/forbid-foreign-prop-types": "error",
-    "camelcase": "off"
+    "react/forbid-foreign-prop-types": "error"
   }
 }
