--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
       "./app/core/assets/fonts/"
     ]
   },
+  "prettier": {
+    "singleQuote": true
+  },
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "16.8.6",
@@ -21,22 +24,29 @@
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "prettier": "^1.18.2",
     "@babel/core": "7.5.0",
     "@babel/runtime": "7.5.0",
-    "babel-jest": "24.8.0",
-    "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.55.0",
-    "react-test-renderer": "16.8.3",
+    "@types/react": "^16.8.19",
+    "@types/react-native": "^0.57.60",
+    "@types/react-native-vector-icons": "^6.4.1",
+    "@typescript-eslint/eslint-plugin": "1.11.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "babel-eslint": "^10.0.2",
+    "babel-jest": "24.8.0",
     "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-react-native": "^3.7.0"
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-react-native": "^3.7.0",
+    "jest": "24.8.0",
+    "metro-react-native-babel-preset": "0.55.0",
+    "prettier": "^1.18.2",
+    "react-test-renderer": "16.8.3",
+    "typescript": "^3.5.3"
   },
   "jest": {
     "preset": "react-native"
