--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint-staged": "lint-staged"
   },
   "rnpm": {
     "assets": [
@@ -15,25 +16,42 @@
     "singleQuote": true,
     "cursorOffset": -1
   },
+  "lint-staged": {
+    "linters": {
+      "./**/*.{ts,tsx}": [
+        "eslint --fix",
+        "prettier --write",
+        "tsc",
+        "git add"
+      ]
+    }
+  },
+  "postinstall": "npx jetify",
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "@types/react-redux": "^7.1.1",
     "normalizr": "^3.4.1",
     "react": "16.8.6",
     "react-native": "0.60.4",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.13.0",
+    "react-native-safe-area-context": "^3.1.7",
+    "react-native-screens": "^2.10.1",
     "react-native-track-player": "1.1.8",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.0",
-    "react-navigation-hooks": "^1.0.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
     "typesafe-actions": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "7.5.0",
-    "@babel/runtime": "7.5.0",
-    "@types/react": "^16.8.19",
+    "@babel/core": "7.11.4",
+    "@babel/runtime": "7.11.2",
+    "@types/react": "^16.9.48",
     "@types/react-native": "^0.57.60",
     "@types/react-native-vector-icons": "^6.4.1",
     "@typescript-eslint/eslint-plugin": "1.11.0",
@@ -41,19 +59,19 @@
     "babel-eslint": "^10.0.2",
     "babel-jest": "24.8.0",
     "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-react-native": "^3.7.0",
     "jest": "24.8.0",
+    "lint-staged": "^7.3.0",
     "metro-react-native-babel-preset": "0.55.0",
     "prettier": "^1.18.2",
     "react-test-renderer": "16.8.3",
-    "typescript": "^3.5.3"
+    "typescript": "^4.0.2"
   },
   "jest": {
     "preset": "react-native"
