--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,7 @@
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "import/extensions": "off",
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".tsx"] }],
     "react/no-unescaped-entities": "off",
     "react/jsx-one-expression-per-line": "off",
