--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
+    "android": "npx react-native run-android",
     "lint-staged": "lint-staged"
   },
   "rnpm": {
@@ -29,16 +30,16 @@
   "postinstall": "npx jetify",
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.9.2",
     "@types/react-redux": "^7.1.1",
     "normalizr": "^3.4.1",
     "react": "16.8.6",
     "react-native": "0.60.4",
-    "react-native-gesture-handler": "^1.7.0",
-    "react-native-reanimated": "^1.13.0",
-    "react-native-safe-area-context": "^3.1.7",
-    "react-native-screens": "^2.10.1",
+    "react-native-gesture-handler": "^1.10.1",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.17.1",
     "react-native-track-player": "1.1.8",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.0",
@@ -46,7 +47,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "redux-saga-test-plan": "^4.0.0-rc.3",
-    "typesafe-actions": "^4.4.2"
+    "typesafe-actions": "^4.4.2",
+    "use-subscription": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "7.11.4",
